crates/oxc_linter/src/snapshots/jsx_a11y_lang@expression_strings.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={"foo"} />
   ·       ────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={""} />
   ·       ─────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={"zz-LL"} />
   ·       ──────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={``} />
   ·       ─────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={`foo`} />
   ·       ────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={`\u0066oo`} />
   ·       ─────────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={("foo" as const)} />
   ·       ───────────────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:7]
 1 │ <html lang={`zz-LL`} />
   ·       ──────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:11]
 1 │ <Document lang={"foo"} />
   ·           ────────────
   ╰────
  help: Set a valid value for `lang` attribute.

  ⚠ jsx-a11y(lang): `lang` attribute must have a valid value.
   ╭─[lang.tsx:1:16]
 1 │ <Box as="html" lang={`foo`} />
   ·                ────────────
   ╰────
  help: Set a valid value for `lang` attribute.
