crates/oxc_linter/src/snapshots/jsx_a11y_media_has_caption.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <audio><track /></audio>
   · ────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <audio><track kind='subtitles' /></audio>
   · ─────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <audio />
   · ─────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <video><track /></video>
   · ────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <video><track kind='subtitles' /></video>
   · ─────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Audio muted={false}></Audio>
   · ─────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Video muted={false}></Video>
   · ─────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Audio muted={false}></Audio>
   · ─────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Video muted={false}></Video>
   · ─────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <video />
   · ─────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <audio>Foo</audio>
   · ──────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <video>Foo</video>
   · ──────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Audio />
   · ─────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Video />
   · ─────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Audio />
   · ─────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Video />
   · ─────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <audio><Track /></audio>
   · ────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <video><Track /></video>
   · ────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Audio><Track kind='subtitles' /></Audio>
   · ─────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Video><Track kind='subtitles' /></Video>
   · ─────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Audio><Track kind='subtitles' /></Audio>
   · ─────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Video><Track kind='subtitles' /></Video>
   · ─────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <Box as='audio'><Track kind='subtitles' /></Box>
   · ────────────────────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <audio src="talk.mp3" controls />
   · ─────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.

  ⚠ jsx-a11y(media-has-caption): Missing `<track>` element with captions inside `<audio>` or `<video>` element
   ╭─[media_has_caption.tsx:1:1]
 1 │ <video src="movie.mp4" controls />
   · ──────────────────────────────────
   ╰────
  help: Media elements such as `<audio>` and `<video>` must have a `<track>` for captions.
