crates/oxc_linter/src/snapshots/jsx_a11y_mouse_events_have_key_events.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={() => void 0} />;
   ·      ──────────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={() => void 0} />
   ·      ─────────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={() => void 0} onFocus={undefined} />;
   ·      ──────────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={() => void 0} onBlur={undefined} />
   ·      ─────────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={() => void 0} {...props} />
   ·      ──────────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={() => void 0} {...props} />
   ·      ─────────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={() => {}} onMouseOut={() => {}} />
   ·      ──────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:29]
 1 │ <div onMouseOver={() => {}} onMouseOut={() => {}} />
   ·                             ─────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onPointerEnter` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onPointerEnter={() => {}} onPointerLeave={() => {}} />
   ·      ─────────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onPointerLeave` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:32]
 1 │ <div onPointerEnter={() => {}} onPointerLeave={() => {}} />
   ·                                ─────────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={() => {}} />
   ·      ──────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onPointerEnter` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onPointerEnter={() => {}} />
   ·      ─────────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={() => {}} />
   ·      ─────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onPointerLeave` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onPointerLeave={() => {}} />
   ·      ─────────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={handler} onFocus={null} />
   ·      ─────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={handler} onBlur={null} />
   ·      ────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={handler} onFocus={undefined} />
   ·      ─────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={handler} onBlur={undefined} />
   ·      ────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={handler} onFocus />
   ·      ─────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={handler} onBlur />
   ·      ────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseEnter` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:25]
 1 │ <div onMouseOver={null} onMouseEnter={handler} />
   ·                         ──────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseLeave` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:29]
 1 │ <div onMouseOut={undefined} onMouseLeave={handler} />
   ·                             ──────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseEnter` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:25]
 1 │ <div onMouseOver={null} onMouseEnter={handler} onFocus={null} />
   ·                         ──────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseLeave` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:29]
 1 │ <div onMouseOut={undefined} onMouseLeave={handler} onBlur={null} />
   ·                             ──────────────────────
   ╰────
  help: Try to add `onBlur`.
