crates/oxc_linter/src/snapshots/jsx_a11y_mouse_events_have_key_events@nullish_handlers.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={handler} onFocus={null} />
   ·      ─────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={handler} onBlur={null} />
   ·      ────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={handler} onFocus={undefined} />
   ·      ─────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={handler} onBlur={undefined} />
   ·      ────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOver` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOver={handler} onFocus />
   ·      ─────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseOut` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:6]
 1 │ <div onMouseOut={handler} onBlur />
   ·      ────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseEnter` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:25]
 1 │ <div onMouseOver={null} onMouseEnter={handler} />
   ·                         ──────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseLeave` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:29]
 1 │ <div onMouseOut={undefined} onMouseLeave={handler} />
   ·                             ──────────────────────
   ╰────
  help: Try to add `onBlur`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseEnter` must be accompanied by `onFocus` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:25]
 1 │ <div onMouseOver={null} onMouseEnter={handler} onFocus={null} />
   ·                         ──────────────────────
   ╰────
  help: Try to add `onFocus`.

  ⚠ jsx-a11y(mouse-events-have-key-events): `onMouseLeave` must be accompanied by `onBlur` for accessibility.
   ╭─[mouse_events_have_key_events.tsx:1:29]
 1 │ <div onMouseOut={undefined} onMouseLeave={handler} onBlur={null} />
   ·                             ──────────────────────
   ╰────
  help: Try to add `onBlur`.
