crates/oxc_linter/src/snapshots/jsx_a11y_no_access_key.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accesskey="h" />
   ·      ─────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey="h" />
   ·      ─────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey="h" {...props} />
   ·      ─────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div acCesSKeY="y" />
   ·      ─────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={"y"} />
   ·      ───────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={`${y}`} />
   ·      ──────────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={`${undefined}y${undefined}`} />
   ·      ───────────────────────────────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={`This is ${bad}`} />
   ·      ────────────────────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={accessKey} />
   ·      ─────────────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={`${undefined}`} />
   ·      ──────────────────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.

  ⚠ jsx-a11y(no-access-key): No access key attribute allowed.
   ╭─[no_access_key.tsx:1:6]
 1 │ <div accessKey={`${undefined}${undefined}`} />
   ·      ──────────────────────────────────────
   ╰────
  help: Remove the `accessKey` attribute. Inconsistencies between keyboard shortcuts and keyboard commands used by screen readers and keyboard-only users create accessibility complications.
