crates/oxc_linter/src/snapshots/jsx_a11y_no_aria_hidden_on_focusable.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-jsx-a11y(no-aria-hidden-on-focusable): `aria-hidden` must not be true on focusable elements.
   ╭─[no_aria_hidden_on_focusable.tsx:1:6]
 1 │ <div aria-hidden="true" tabIndex="0" />;
   ·      ──────────────────
   ╰────
  help: Remove `aria-hidden="true"` from focusable elements or modify the element to be not focusable.
    ╭╴
  1 - <div aria-hidden="true" tabIndex="0" />;
  1 + <div  tabIndex="0" />;
    ╰╴

  ⚠ eslint-plugin-jsx-a11y(no-aria-hidden-on-focusable): `aria-hidden` must not be true on focusable elements.
   ╭─[no_aria_hidden_on_focusable.tsx:1:8]
 1 │ <input aria-hidden="true" />;
   ·        ──────────────────
   ╰────
  help: Remove `aria-hidden="true"` from focusable elements or modify the element to be not focusable.
    ╭╴
  1 - <input aria-hidden="true" />;
  1 + <input  />;
    ╰╴

  ⚠ eslint-plugin-jsx-a11y(no-aria-hidden-on-focusable): `aria-hidden` must not be true on focusable elements.
   ╭─[no_aria_hidden_on_focusable.tsx:1:13]
 1 │ <a href="/" aria-hidden="true" />
   ·             ──────────────────
   ╰────
  help: Remove `aria-hidden="true"` from focusable elements or modify the element to be not focusable.
    ╭╴
  1 - <a href="/" aria-hidden="true" />
  1 + <a href="/"  />
    ╰╴

  ⚠ eslint-plugin-jsx-a11y(no-aria-hidden-on-focusable): `aria-hidden` must not be true on focusable elements.
   ╭─[no_aria_hidden_on_focusable.tsx:1:9]
 1 │ <button aria-hidden="true" />
   ·         ──────────────────
   ╰────
  help: Remove `aria-hidden="true"` from focusable elements or modify the element to be not focusable.
    ╭╴
  1 - <button aria-hidden="true" />
  1 + <button  />
    ╰╴

  ⚠ eslint-plugin-jsx-a11y(no-aria-hidden-on-focusable): `aria-hidden` must not be true on focusable elements.
   ╭─[no_aria_hidden_on_focusable.tsx:1:11]
 1 │ <textarea aria-hidden="true" />
   ·           ──────────────────
   ╰────
  help: Remove `aria-hidden="true"` from focusable elements or modify the element to be not focusable.
    ╭╴
  1 - <textarea aria-hidden="true" />
  1 + <textarea  />
    ╰╴

  ⚠ eslint-plugin-jsx-a11y(no-aria-hidden-on-focusable): `aria-hidden` must not be true on focusable elements.
   ╭─[no_aria_hidden_on_focusable.tsx:1:17]
 1 │ <p tabIndex="0" aria-hidden="true">text</p>;
   ·                 ──────────────────
   ╰────
  help: Remove `aria-hidden="true"` from focusable elements or modify the element to be not focusable.
    ╭╴
  1 - <p tabIndex="0" aria-hidden="true">text</p>;
  1 + <p tabIndex="0" >text</p>;
    ╰╴
