crates/oxc_linter/src/snapshots/jsx_a11y_no_autofocus.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus />
   ·      ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={true} />
   ·      ────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={true} />
   ·      ────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={"true"} />
   ·      ──────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={`true`} />
   ·      ──────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={(true)} />
   ·      ──────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={true} />
   ·      ────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus={undefined} />
   ·      ─────────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <div autoFocus="true" />
   ·      ────────────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:8]
 1 │ <input autoFocus />
   ·        ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:6]
 1 │ <Foo autoFocus />
   ·      ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:9]
 1 │ <Button autoFocus />
   ·         ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:9]
 1 │ <Button autoFocus />
   ·         ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:9]
 1 │ <dialog autoFocus />
   ·         ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:20]
 1 │ <div role="dialog" autoFocus />
   ·                    ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:14]
 1 │ <div popover autoFocus />
   ·              ─────────
   ╰────
  help: Remove the `autoFocus` attribute.

  ⚠ jsx-a11y(no-autofocus): The `autoFocus` attribute is found here, which can cause usability issues for sighted and non-sighted users.
   ╭─[no_autofocus.tsx:1:21]
 1 │ <div popover="auto" autoFocus />
   ·                     ─────────
   ╰────
  help: Remove the `autoFocus` attribute.
