crates/oxc_linter/src/snapshots/jsx_a11y_no_distracting_elements.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<marquee>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <marquee />
   ·  ───────
   ╰────
  help: Replace the `<marquee>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<marquee>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <marquee {...props} />
   ·  ───────
   ╰────
  help: Replace the `<marquee>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<marquee>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <marquee lang={undefined} />
   ·  ───────
   ╰────
  help: Replace the `<marquee>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<blink>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <blink />
   ·  ─────
   ╰────
  help: Replace the `<blink>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<blink>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <blink {...props} />
   ·  ─────
   ╰────
  help: Replace the `<blink>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<blink>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <blink foo={undefined} />
   ·  ─────
   ╰────
  help: Replace the `<blink>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<marquee>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <marquee />
   ·  ───────
   ╰────
  help: Replace the `<marquee>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<blink>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <blink />
   ·  ─────
   ╰────
  help: Replace the `<blink>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<blink>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <Blink />
   ·  ─────
   ╰────
  help: Replace the `<blink>` element with alternative, more accessible ways to achieve your desired visual effects.

  ⚠ jsx-a11y(no-distracting-elements): Do not use `<marquee>` elements as they can create visual accessibility issues and are deprecated.
   ╭─[no_distracting_elements.tsx:1:2]
 1 │ <Marquee />
   ·  ───────
   ╰────
  help: Replace the `<marquee>` element with alternative, more accessible ways to achieve your desired visual effects.
